--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,16 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "twilio (>=9.6.2,<10.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "psycopg[binary] (>=3.2.9,<4.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+alembic = "^1.16.1"
+
