--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "twilio (>=9.6.2,<10.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
-    "psycopg[binary] (>=3.2.9,<4.0.0)"
+    "psycopg[binary] (>=3.2.9,<4.0.0)",
+    "apscheduler (>=3.11.0,<4.0.0)"
 ]
 
 
